--- a/SMTP/config/config.properties
+++ b/SMTP/config/config.properties
@@ -1,7 +1,9 @@
-serverAddress=mail01.heig-vd.ch
+serverAddress=localhost
 port=2525
-nbGroups=1
+nbGroups=2
 nbPeoplePerGroup=3
-witnessesToCc=cassandre.wojciechowski@heig-vd.ch
 listVictims=config/email_addresses.utf8
 emailTemplates=config/email_template.utf8
+witnessesToCc=cassandre.wojciechowski@heig-vd.ch
+witnessesToBcc=gwendoline.dossegger@heig-vd.ch
+
