--- a/SMTP/config/config.properties
+++ b/SMTP/config/config.properties
@@ -1,5 +1,5 @@
-serverAddress=localhost
-port=25
+serverAddress=172.17.0.1
+port=2525
 nbGroups=2
 nbPeoplePerGroup=3
 listVictims=config/email_addresses.utf8
